--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,12 @@
           content-visibility: auto;
         }
       }
+
+      @layer base {
+        html {
+          font-family: "Public Sans", sans-serif;
+        }
+      }
     </style>
     <link href="/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="input.css" />
